--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "main": "index.js",
+  "main": "src/index.js",
+  "license": "MIT",
   "scripts": {
     "test": "jest --watchAll",
     "test:ci": "jest --ci"
